moved git download into folder #3026